# LifeOS

./: .gitignore  AGENTS.md  README.md  main.py  plan.md  pyproject.toml
commands/: _cleanup.py  _folders.py  _hygiene.py  cleanup.py  doctor.py  init.py
data/: life-os.spec.yaml
life_os/: __init__.py  app.py  context.py
tests/: test_cleanup.py  test_context.py  test_hygiene.py
