[project]
name = "lifeos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pyyaml>=6.0.3",
    "questionary>=2.1.1",
    "rich>=14.3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
